<resources>
    <string name="app_name">MNTC-App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="about_mntc">Mathematics,an abstract science of numbers, quantity and space, has held its place as prerequisite to flourish in today world. At Maths N Tech Club, we realize the importance of analytical reasoning and rational thinking and hence organize a plethora of events which kindle student interest in maths and the thirst of knowledge.</string>


    <string name="aavishkar_desc">Description of aavishkar </string>
    <!--Strings for our team page -->
    <string name="our_team">OUR TEAM</string>
    <string name="mntc_member_name">Name : </string>
    <string name="mntc_member_designation">Designation : </string>
    <string name="mntc_member_contact">Contact : </string>


    <!-- Strings required for Navigation Bar -->
    <string name="nav_aavishkaar">Aavishkaar</string>
    <string name="nav_live_events">Live Events</string>
    <string name="nav_about_us">About Us</string>

    <!-- Strings related to independent event views -->
    <string name="one_img">one</string>
    <string name="one_venue">DM SEN</string>
    <string name="one_date">22 Aug</string>
    <string name="one_time">6:30 PM</string>
    <string name="one_description">jhdfvgakueryfvhjaervfhgaegruyfbwerfverwuf</string>

    <!-- Firebase auth-->

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="login">LOGIN</string>
    <string name="aavishkar_title">Aavishkar 2.0</string>
    <string name="text_mntc_logo">Logo of Maths N Tech Club</string>
</resources>

