<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/login_form_club_logo"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_launcher_background" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:background="@drawable/buttonstylegradient"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"/>


        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:le
            android:id="@+id/googlesigninbtn">

        </com.google.android.gms.common.SignInButton>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_layout"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>

<!---->
<!---->


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:id="@+id/login_form_scroller"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context=".LoginActivity">-->

    <!--<LinearLayout-->
    <!--android:background="@drawable/ic_launcher_foreground"-->
    <!--android:id="@+id/login_form"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <!--<ImageView-->
    <!--android:id="@+id/login_form_club_logo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="115dp"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:src="@drawable/ic_launcher_foreground" />-->


    <!--<TextView-->
    <!--android:id="@+id/login_form_club_description"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/about_mntc"-->
    <!--android:textSize="15sp"-->
    <!--android:textColor="@color/colorAccent"/>-->

    <!--<ProgressBar-->
    <!--android:id="@+id/login_progress"-->
    <!--style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:visibility="gone" />-->

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<AutoCompleteTextView-->
    <!--android:id="@+id/email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/prompt_email"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<EditText-->
    <!--android:id="@+id/password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/prompt_password"-->
    <!--android:imeActionId="6"-->
    <!--android:imeActionLabel="@string/action_sign_in_short"-->
    <!--android:imeOptions="actionUnspecified"-->
    <!--android:inputType="textPassword"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<Button-->
    <!--android:id="@+id/email_sign_in_button"-->
    <!--style="?android:textAppearanceSmall"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text="@string/action_sign_in"-->
    <!--android:textStyle="bold" />-->

    <!--</LinearLayout>-->

    <!--</ScrollView>-->